--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,7 @@ h1 {
   font-size: 96px;
   margin: 0;
   margin-bottom: 0.15em;
-  color: var(--main-font-color);
+  /* color: var(--main-font-color); */
 
   @media (max-width: 768px) {
     font-weight: 400;
@@ -71,7 +71,7 @@ font-style: normal;
   line-height: 1.2;
   margin: 0;
   margin-bottom: 1em;
-  color: var(--main-font-color);
+  /* color: var(--main-font-color); */
 
   @media (max-width: 768px) {
     font-weight: 400;
@@ -80,6 +80,21 @@ font-style: normal;
 }
 
 h3 {
+  font-family: bely-display, sans-serif;
+font-weight: 400;
+font-style: normal;
+  font-size: 38px;
+  line-height: 1.2;
+  margin: 0;
+  margin-bottom: 1em;
+  color: var(--main-font-color);
+
+  @media (max-width: 768px) {
+    font-weight: 400;
+    -webkit-text-stroke: 0.3px;
+  }
+}
+/* h3 {
   font-family: "Gravitas One", serif;
   font-size: 36px;
   font-weight: 200;
@@ -95,7 +110,7 @@ h3 {
   @media screen and (max-width: 478px) {
     font-size: 24px;
   }
-}
+} */
 
 p {
   font-size: 18px;
