--- a/src/index.css
+++ b/src/index.css
@@ -48,10 +48,15 @@ h1 {
   font-family: bely-display, sans-serif;
   font-weight: 400;
   font-style: normal;
-  font-size: 96px;
+  font-size: 128px;
   margin: 0;
-  margin-bottom: 0.15em;
-  /* color: var(--main-font-color); */
+  /* margin-bottom: 0.15em; */
+ 
+  @media (max-width: 960px) {
+    font-size: 96px;
+    font-weight: 400;
+    -webkit-text-stroke: 0.3px;
+  }
 
   @media (max-width: 768px) {
     font-weight: 400;
